--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ function select(id) {
 }
 </script>
 
-	<div class="card">
+	<div class="card" ontouchstart="this.classList.toggle('hover');">
 		<div class="cardContainer">
 			<div class="cardFront">
 				<div class="cardHeader">
