--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ function select(id) {
 }
 </script>
 
-	<div class="card" ontouchstart="this.classList.toggle('hover');">
+	<div class="card">
 		<div class="cardContainer">
-			<div class="cardFront">
+			<div class="cardFront" ontouchstart="this.classList.toggle('hover');">
 				<div class="cardHeader">
 					<h1 id="cardTitle"></h1>
 				</div>
@@ -224,7 +224,7 @@ function select(id) {
 					<p id="cardDescription"></p>
 				</div>
 			</div>
-			<div class="cardBack"></div>
+			<div class="cardBack" ontouchstart="this.classList.toggle('hover');"></div>
 		</div>
 	</div>
 	
