--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ function select(id) {
 
 	<div class="card">
 		<div class="cardContainer">
-			<div class="cardFront" ontouchstart="this.classList.toggle('hover');">
+			<div class="cardFront">
 				<div class="cardHeader">
 					<h1 id="cardTitle"></h1>
 				</div>
@@ -224,7 +224,7 @@ function select(id) {
 					<p id="cardDescription"></p>
 				</div>
 			</div>
-			<div class="cardBack" ontouchstart="this.classList.toggle('hover');"></div>
+			<div class="cardBack"></div>
 		</div>
 	</div>
 	
