--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
-<!DOCTYPE html>
-<html lang="en-US">
+
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
-	<title>Trading Cards Demo</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Trading Cards Demo</title>
+<meta name="description" content="BrofistCoin is a fan made meme coin that is powered by the Ethereum blockchain.">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="https://brofistcoin.io/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="https://brofistcoin.io/assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="https://brofistcoin.io/assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="https://brofistcoin.io/assets/css/ie8.css" /><![endif]-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3064259-44"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-3064259-44');
+	</script>
+	
+	<link rel="apple-touch-icon" sizes="57x57" href="https://brofistcoin.io/icons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="https://brofistcoin.io/icons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="https://brofistcoin.io/icons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="https://brofistcoin.io/icons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="https://brofistcoin.io/icons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="https://brofistcoin.io/icons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="https://brofistcoin.io/icons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="https://brofistcoin.io/icons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://brofistcoin.io/icons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="https://brofistcoin.io/icons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://brofistcoin.io/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://brofistcoin.io/icons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://brofistcoin.io/icons/favicon-16x16.png">
+	<link rel="manifest" href="https://brofistcoin.io/icons/manifest.json">
+	<meta name="msapplication-TileColor" content="#5d4c91">
+	<meta name="msapplication-TileImage" content="https://brofistcoin.io/icons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#5d4c91">
 	<style>
 	@font-face {
 		font-family: myFont;
 		src: url(font.woff);
-	}
-	
-	.whatTheFuck {
-		width: 400px;
-		margin: 0 auto;
-		text-align: center;
-	}
-	
-	.whatTheFuck p {
-		font-family: Arial;
-		font-size: 16px; line-height: 1.2;
 	}
 	
 	.cardFront {
@@ -54,7 +76,15 @@
 	}
 	
 	#cardTitle {
-		color: white;
+		white-space: nowrap;
+		display: block;
+		font-size: 2em;
+		-webkit-margin-before: 0.67em;
+		-webkit-margin-after: 0.67em;
+		-webkit-margin-start: 0px;
+		-webkit-margin-end: 0px;
+		font-weight: bold;
+		color: white !important;
 		text-shadow: 2px 2px black;
 		letter-spacing: 2px;
 		vertical-align: middle;
@@ -99,21 +129,14 @@
 		letter-spacing: 1px;
 		color: white;
 		padding-right: 110px;
+		padding-top: 15px;
+		line-height: 1.2;
 	}
 	
 	#linksContainer {
 		text-align: center;
 	}
 	
-	.card, .info {
-		float: left;
-	}
-	
-	.info {
-		height: 540px;
-		padding: 5px;
-	}
-
 	.card {
 		width: 400px;
 		height: 540px;
@@ -138,37 +161,161 @@
 		transform: rotateY( 180deg );
 	}
 	
-	button {
-		background-color: purple;
-		border: 0;
-		cursor: pointer;
-		color: white;
-		font-family: Arial;
-		font-size: 12px;
-		font-weight: bold;
-		padding: 7px 7px;
-		text-decoration: none;
-	}
-	
-	button:active {
-		position:relative;
-		top:1px;
-	}
-	
-	button:focus {
-		outline: none;
+	.info, .additionalSqueeze {
+		margin-top: 1em;
 	}
 </style>
 </head>
 <body>
+
+<!-- Wrapper -->
+<div id="wrapper">
+
+	<nav id="topmenu">
+	<ul>
+		<li><a href="https://brofistcoin.io/send/">Transfer</a></li>
+		<li><a href="https://brofistcoin.io/trading-cards">Trading Cards</a></li>
+		<li><a href="https://medium.com/@BrofistCoin.io">Medium</a></li>
+		<li><a href="https://brofistcoin.io/about/">About</a></li>
+		<li><a href="https://brofistcoin.io/BrofistCoin_Whitepaper.pdf">Whitepaper</a></li>
+		<li><a href="https://brofistcoin.io/faq/">FAQ</a></li>
+	</ul>
+	</nav>
+
+
+<!-- Header -->
+<header id="header">
+<h1><a id="logolink" href="https://brofistcoin.io">Trading Cards Demo</a></h1>
+</header>
+
+<!-- Main -->
+<div id="main" class="lonelyContent">
+
+	<!-- Content -->
+	<section id="content" class="main">
+	
+	<div class="card">
+		<div id="cardContainer" class="cardContainer">
+			<div class="cardFront">
+				<div class="cardHeader">
+					<h1 id="cardTitle"></h1>
+				</div>
+				<div id="cardImage"></div>
+				<div class="cardDescriptionContainer">
+					<p id="cardDescription"></p>
+				</div>
+			</div>
+			<div class="cardBack"></div>
+		</div>
+	</div>
+	
+	<div class="info">
+	
+		<div id="linksContainer">
+			<button onClick="select('00001'); flip()">Boar Vessel</button>
+			<button onClick="select('00002'); flip()">Ugandan Knuckles</button>
+			<button onClick="select('00003'); flip()">PewDiePie's Chair</button>
+			<button onClick="select('00004'); flip()">Edgar</button>
+		</div>
+		
+		<div class="additionalSqueeze">
+			<p>This demo shows how to dynamically load different memes into the trading card's template. 
+			Click on the buttons above to see how it works!<br><br>
+			Eventually these are going to be deployed on the Ethereum blockchain as ERC721 tokens which means 
+			that the cards can be <strong>owned</strong> and there will be a <strong>limited amount</strong> of 
+			each card in existence.<br><br>
+			Check out the
+			<a href="https://github.com/BroFistIO/Trading-Cards" target="_blank">source code</a> and talk to the rest 
+			of the team in our <a href="https://discord.gg/qufg63c"target="_blank">Discord</a>. If you happen to be 
+			experienced in Solidity and know about the ERC-721 standard you're welcome to join the dev team!</p>
+		</div>
+	
+	</div>
+	
+	</section>
+
+</div>
+
+	<!-- Footer -->
+	<footer id="footer">
+	<section>
+	
+	<h5>If you're PewDiePie, please don't copystrike us.
+	</h5>
+	
+	<a href="https://brofistcoin.io/about" target="_blank">About BrofistCoin</a><br>
+	<a href="https://brofistcoin.io/BrofistCoin_Whitepaper.pdf" target="_blank">Whitepaper</a><br>
+	<a href="https://brofistcoin.io/faq" target="_blank">FAQ</a><br>
+	<a href="https://medium.com/@BrofistCoin.io" target="_blank">Medium blog</a><br>
+	<a href="https://brofistcoin.io/careers" target="_blank">Open positions</a>
+	
+	</section>
+
+
+	<section>
+	<h4 class="mytitle2">Get in touch</h4>
+	<dl class="alt">
+	<dt>Address</dt>
+	<dd>PewDiePie's closet</dd>
+	<dt>Phone</dt>
+	<dd>1-800-PEWDIEPIE</dd>
+	<dt>Email</dt>
+	<dd><a href="#">info@BrofistCoin.io</a></dd>
+	<dt>Telegram</dt>
+	<dd><a href="http://t.me/BrofistCoin_en" target="_blank">English</a>, <a href="https://t.me/BrofistCoin_zh" target="_blank">Chinese</a></dd>
+	</dl>
+	
+	<ul class="icons">
+	
+	<li><a href="https://bitcointalk.org/index.php?topic=2991802" target="_blank" class="icon fa-btc alt">
+	<span class="label">Bitcointalk</span></a>
+	</li>
+	
+	<li><a href="https://twitter.com/BrofistCoinio" target="_blank" class="icon fa-twitter alt">
+	<span class="label">Twitter</span></a>
+	</li>
+	
+	<li><a href="https://www.facebook.com/BrofistCoinio/" target="_blank" class="icon fa-facebook alt">
+	<span class="label">Facebook</span></a>
+	</li>
+	
+	<li><a href="https://www.reddit.com/r/BrofistCoin/" target="_blank" class="icon fa-reddit alt">
+	<span class="label">Reddit</span></a>
+	</li>
+	
+	<li><a href="https://jq.qq.com/?_wv=1027&k=5gTVnaf" target="_blank" class="icon fa-qq alt">
+	<span class="label">QQ</span></a>
+	</li>
+	
+	<li><a href="https://github.com/BroFistIO" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+	</ul>
+	
+	</section>
+
+	</footer>
+
+</div>
+
+<!-- Scripts -->
+<script src="https://brofistcoin.io/assets/js/jquery.min.js"></script>
+<script src="https://brofistcoin.io/assets/js/jquery.scrollex.min.js"></script>
+<script src="https://brofistcoin.io/assets/js/jquery.scrolly.min.js"></script>
+<script src="https://brofistcoin.io/assets/js/skel.min.js"></script>
+<script src="https://brofistcoin.io/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="https://brofistcoin.io/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="https://brofistcoin.io/assets/js/main.js"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a8c4fea74b40c8c"></script>
+
+
 <script>
-window.onload = function(e) {
+
 
 	document.getElementById("cardTitle").innerHTML="Trading Cards Demo";
 	document.getElementById("cardDescription").innerHTML="Click a button to activate a meme card!";
 	document.getElementById("cardImage").style.backgroundImage="url(Memes/320x300/00000.jpg)";
 
-}
+
 
 function select(id) {
 
@@ -222,42 +369,5 @@ function flip() {
 }
 </script>
 
-	<div class="card">
-		<div id="cardContainer" class="cardContainer">
-			<div class="cardFront">
-				<div class="cardHeader">
-					<h1 id="cardTitle"></h1>
-				</div>
-				<div id="cardImage"></div>
-				<div class="cardDescriptionContainer">
-					<p id="cardDescription"></p>
-				</div>
-			</div>
-			<div class="cardBack"></div>
-		</div>
-	</div>
-	
-	<div class="info">
-	
-		<div id="linksContainer">
-			<button onClick="select('00001'); flip()">Boar Vessel</button>
-			<button onClick="select('00002'); flip()">Ugandan Knuckles</button>
-			<button onClick="select('00003'); flip()">PewDiePie's Chair</button>
-			<button onClick="select('00004'); flip()">Edgar</button>
-		</div>
-		
-		<div class="whatTheFuck">
-			<p>This demo shows how to dynamically load different memes into the trading card's template. 
-			Click on the buttons above to see how it works!<br><br>
-			Eventually these are going to be deployed on the Ethereum blockchain as ERC721 tokens which means 
-			that the cards can be <strong>owned</strong> and there will be a <strong>limited amount</strong> of 
-			each card in existence.<br><br>
-			I have absolutely nothing better to do with my life... so if you're like me, check out the
-			<a href="https://github.com/BroFistIO/Trading-Cards" target="_blank">source code</a> and talk to the rest 
-			of the team in our <a href="https://discord.gg/qufg63c"target="_blank">Discord</a></p>
-		</div>
-	
-	</div>
-	
 </body>
 </html>
