--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 		src: url(font.woff);
 	}
 	
-	body {
-		box-sizing: border-box;
-		width: 100%;
-	}
-	
 	.whatTheFuck {
 		width: 400px;
 		margin: 0 auto;
@@ -24,6 +19,11 @@
 	.whatTheFuck p {
 		font-family: Arial;
 		font-size: 16px; line-height: 1.2;
+	}
+	
+	.whatTheFuck img {
+		width: 100%;
+		margin: 0 auto;
 	}
 	
 	.cardFront {
@@ -108,10 +108,6 @@
 	
 	#linksContainer {
 		text-align: center;
-	}
-	
-	.card, .info {
-		float: left;
 	}
 	
 	.info {
@@ -257,6 +253,7 @@ function flip() {
 			Eventually these are going to be deployed on the Ethereum blockchain as ERC721 tokens which means 
 			that the cards can be <strong>owned</strong> and there will be a <strong>limited amount</strong> of 
 			each card in existence.<br><br>
+			<img src="Cards/All-Cards.png" alt="Trading Cards Deck">
 			Check out the
 			<a href="https://github.com/BroFistIO/Trading-Cards" target="_blank">source code</a> and talk to the rest 
 			of the team in our <a href="https://discord.gg/qufg63c"target="_blank">Discord</a>. If you happen to be 
