--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function flip() {
 			Eventually these are going to be deployed on the Ethereum blockchain as ERC721 tokens which means 
 			that the cards can be <strong>owned</strong> and there will be a <strong>limited amount</strong> of 
 			each card in existence.<br><br>
-			<img src="Cards/All-Cards.png" alt="Trading Cards Deck">
+			<img src="Cards/All-Cards.png" alt="Trading Cards Deck"/>
 			Check out the
 			<a href="https://github.com/BroFistIO/Trading-Cards" target="_blank">source code</a> and talk to the rest 
 			of the team in our <a href="https://discord.gg/qufg63c"target="_blank">Discord</a>. If you happen to be 
