--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<title>Trading Cards Demo</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="PewDiePie & Memes Trading Cards">
+	<meta property="og:description" content="Rare and ownable virtual assets that you can buy with BrofistCoin.">
+	<meta property="og:image" content="Cards/All-Cards.png">
+	<meta property="og:url" content="https://brofistcoin.io/trading-cards">
+	<meta name="twitter:title" content="PewDiePie & Memes Trading Cards">
+	<meta name="twitter:description" content="Rare and ownable virtual assets that you can buy with BrofistCoin.">
+	<meta name="twitter:image" content="Cards/All-Cards.png">
+	<meta name="twitter:card" content="summary_large_image">
 	<style>
 	@font-face {
 		font-family: myFont;
