--- a/index.html
+++ b/index.html
@@ -208,6 +208,12 @@ function select(id) {
 		imageSource = "url(Memes/320x300/00004.jpg)";
 	}
 	
+	else if (id == "00005") {
+		cardTitle = "Hype Beast";
+		cardDescription = "Who would buy these?!";
+		imageSource = "url(Memes/320x300/00005.jpg)";
+	}
+	
 	
 	window.setTimeout(function() {
 
@@ -253,6 +259,7 @@ function flip() {
 			<button onClick="select('00002'); flip()">Ugandan Knuckles</button>
 			<button onClick="select('00003'); flip()">PewDiePie's Chair</button>
 			<button onClick="select('00004'); flip()">Edgar</button>
+			<button onClick="select('00005'); flip()">Hype Beast</button>
 		</div>
 		
 		<div class="whatTheFuck">
