--- a/fluid.html
+++ b/fluid.html
@@ -171,6 +171,12 @@ function select(id) {
 		imageSource = "Memes/320x300/00004.jpg";
 	}
 	
+	else if (id == "00005") {
+		cardTitle = "Hype Beast";
+		cardDescription = "Who would buy these?!";
+		imageSource = "url(Memes/320x300/00005.jpg)";
+	}
+	
 	
 	window.setTimeout(function() {
 
@@ -217,6 +223,7 @@ function flip() {
 		<button onClick="select('00002'); flip()">Ugandan Knuckles</button>
 		<button onClick="select('00003'); flip()">PewDiePie's Chair</button>
 		<button onClick="select('00004'); flip()">Edgar</button>
+		<button onClick="select('00005'); flip()">Hype Beast</button>
 	</div>
 
 </body>
