--- a/fluid.html
+++ b/fluid.html
@@ -174,7 +174,7 @@ function select(id) {
 	else if (id == "00005") {
 		cardTitle = "Hype Beast";
 		cardDescription = "Who would buy these?!";
-		imageSource = "url(Memes/320x300/00005.jpg)";
+		imageSource = "Memes/320x300/00005.jpg";
 	}
 	
 	
