--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@ function select(id) {
 		imageSource = "url(Memes/320x300/00005.jpg)";
 	}
 	
+	else if (id == "00006") {
+		cardTitle = "The Announcer";
+		cardDescription = "Everyone! We have an announcement to make!";
+		imageSource = "url(Memes/320x300/00006.jpg)";
+	}
+	
 	
 	window.setTimeout(function() {
 
