--- a/fluid.html
+++ b/fluid.html
@@ -177,6 +177,12 @@ function select(id) {
 		imageSource = "Memes/320x300/00005.jpg";
 	}
 	
+	else if (id == "00006") {
+		cardTitle = "The Announcer";
+		cardDescription = "Everyone! We have an announcement to make!";
+		imageSource = "url(Memes/320x300/00006.jpg)";
+	}
+	
 	
 	window.setTimeout(function() {
 
