--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ function flip() {
 			<button onClick="select('00003'); flip()">PewDiePie's Chair</button>
 			<button onClick="select('00004'); flip()">Edgar</button>
 			<button onClick="select('00005'); flip()">Hype Beast</button>
+			<button onClick="select('00006'); flip()">The Announcer</button>
 		</div>
 		
 		<div class="whatTheFuck">
