--- a/fluid.html
+++ b/fluid.html
@@ -180,7 +180,7 @@ function select(id) {
 	else if (id == "00006") {
 		cardTitle = "The Announcer";
 		cardDescription = "Everyone! We have an announcement to make!";
-		imageSource = "url(Memes/320x300/00006.jpg)";
+		imageSource = "Memes/320x300/00006.jpg";
 	}
 	
 	
